--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 .toolbar {
   height: 60px;
   align-items: center;
-  background-color: #1976d2;
+  background-color: #3f51b5;
   color: white;
   font-weight: 600;
   position: fixed;
